--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,22 @@
 elm-stuff
 # elm-repl generated files
 repl-temp-*
+
+# Distribution
+build/
+
+# Dependency directories
+node_modules
+
+# Desktop Services Store on macOS
+.DS_Store
+.env
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
