--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start":"elm-live src/Main.elm",
-    "build":"elm make src/Main.elm --output=build/index.html", 
+    "build":"elm make src/Main.elm --output=build/index.html --debug", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
