--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Elm Game Jam Swen and Julien's entry",
   "main": "index.js",
   "scripts": {
-    "start":"elm-live src/Main.elm",
+    "start":"elm-live src/Main.elm --open -- --debug",
     "build":"elm make src/Main.elm --output=build/index.html --debug", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
